objects/Trigger_Switcher_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EnableFlow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EnableFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EnableTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableValidationRule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EnableValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Switcher Setting</label>
</CustomObject>